# openlineage-llm

./: .env  .gitignore  .zenodo.json  CITATION.cff  Makefile  README.md  docker-compose.override.yml  marquez-config.yml  openlineage-marquez.yml  pyproject.toml
.github/workflows/: ci.yml
docs/release/: RELEASE_CHECKLIST.md
examples/: custom_pipeline.py  langchain_demo.py  litellm_demo.py
scripts/: health.sh
src/openlineage_llm/: __init__.py  client.py  config.py  decorators.py  events.py
src/openlineage_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openlineage_llm/integrations/: __init__.py  langchain_callback.py  litellm_callback.py
tests/: test_event_build.py
