[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlineage-llm"
version = "0.1.0"
description = "OpenLineage exporter for AI runs (LangChain, LiteLLM, or custom pipelines)"
authors = [{name = "Rohit Rajdev"}, {name = "Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["openlineage", "marquez", "lineage", "observability", "llm", "langchain", "litellm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pydantic>=2.0.0",
  "openlineage-python>=1.12.0",
  "requests>=2.31.0"
]

[project.optional-dependencies]
langchain = ["langchain>=0.2.0"]
litellm = ["litellm>=1.40.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["openlineage_llm", "openlineage_llm.integrations"]

[tool.setuptools.package-data]
openlineage_llm = ["py.typed"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
